@@ -9,3 +9,15 @@
 	* added russian and polish translations
 	* improved german translation
 	* the spec file isn't maintained anymore directly by me
+
+2006-03-28 Shlomi Fish <shlomif@iglu.org.il>
+	* Fix a data corruption bug with the search function.
+	* Fix the "Find again" functionality.
+	* Eliminate many compilation warnings caused due to a confusion between 
+	signed and unsigned char strings.
+	* Integrated a patch by wwp that:
+		* Fixes proto for find() in src/grg_entries_vis.h (not really used anyway)
+		* Fixes compilation on FC3 (missing #includes to stdio.h)
+		* Adds sensitivity to HTAB environment variable to change the 
+		horizontal tab value in the main edition widget (default: 8)
+
